--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "barryvdh/laravel-debugbar": "^3.2",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^8.0",
-        "squizlabs/php_codesniffer": "^3.5"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "classmap": [
