--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     },
     "scripts": {
         "phpcs": "phpcs",
+        "phpunit": "phpunit",
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ]
