--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     "type": "project",
     "require": {
         "php": "^7.2",
-        "laravel/lumen-framework": "^6.0"
+        "laravel/lumen-framework": "^6.0",
+        "barryvdh/laravel-debugbar": "^3.2"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.2",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^8.5",
