--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.2",
         "guzzlehttp/guzzle": "^6.5",
+        "imangazaliev/didom": "^1.14",
         "laravel/lumen-framework": "^6.0",
         "barryvdh/laravel-debugbar": "^3.2"
     },
