--- a/.env
+++ b/.env
@@ -8,10 +8,10 @@ APP_TIMEZONE=UTC
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=Domains
+DB_CONNECTION=sqlite
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=database.sqlite
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
