--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     "require-dev": {
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^8.5",
-        "squizlabs/php_codesniffer": "^3.5"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "classmap": [
@@ -32,7 +31,6 @@
         ]
     },
     "scripts": {
-        "phpcs": "phpcs",
         "phpunit": "phpunit",
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
