--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,10 @@
     "autoload-dev": {
         "classmap": [
             "tests/"
-        ]
+        ],
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     },
     "scripts": {
         "phpcs": "phpcs",
