--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
         "php": "^7.2",
         "guzzlehttp/guzzle": "^6.5",
         "imangazaliev/didom": "^1.14",
-        "laravel/lumen-framework": "^6.0",
-        "barryvdh/laravel-debugbar": "^3.2"
+        "laravel/lumen-framework": "^6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^8.5",
+        "barryvdh/laravel-debugbar": "^3.2",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
