--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_TIMEZONE=UTC
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=pgsql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=database.sqlite
