--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 APP_NAME=Lumen
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=sqlite
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=database.sqlite
